# vibe-kanban

./: .gitignore  AGENTS.md  AVAILABLE_API_ENDPOINTS.md  BUILD_SUMMARY.md  CHANGELOG.md  Cargo.toml  DOCKER_DEPLOY.md  Dockerfile.dev  Dockerfile.mcp-system  Dockerfile.mcp-task  LETTA_AGENT_INTEGRATION_DESIGN.md  LIST_EXECUTION_PROCESSES_IMPLEMENTATION.md  MCP_INTEGRATION_TESTS_SUMMARY.md  MCP_TOOLS_COMPLETE.md  MCP_TOOL_TEST_RESULTS.md  NEXT_PRIORITIES.md  OPTIMIZATION_SUMMARY.md  PARALLEL_TASK_EXECUTION.md  PHASE2_EXECUTION_PROCESS_TOOLS_COMPLETE.md  README.md  REVIEWER_COMMENT.md  SESSION_SUMMARY.md  TURBOMCP_MIGRATION.md  TURBOMCP_SCHEMA_FIX.md  VIABLE_WORK_ANALYSIS.md  docker-compose.mcp.yml  docker-compose.yml  git_incoming.rs  mcp-http-server.js  routes_incoming.rs  task_server_incoming.rs
.beads/: interactions.jsonl  issues.jsonl
.github/workflows/: docker-build.yml  mcp-build.yml
.serena/: project.yml
.sqlx/: query-42a4fc454425fc650f320ac1dbdda0d64d74b8afcfe659355a9634b4508dc3eb.json
crates/db/: Cargo.toml
crates/db/migrations/: 20251031014027_add_letta_columns_to_projects.sql
crates/db/src/models/: execution_process.rs  project.rs  task.rs  task_attempt.rs
crates/deployment/: Cargo.toml
crates/executors/: Cargo.toml  default_profiles.json
crates/utils/src/: lib.rs
docs/: MCP_TOOLS.md
frontend/: package.json
huly-sync/: BIDIRECTIONAL_SYNC_SUMMARY.md  DEPLOYMENT_COMPLETE.md  FULL_DESCRIPTION_FIX.md  README.md  VIBE_API_REFERENCE.md  create-missing-projects.js  index.js  package.json  sync-projects.js  test-description-fix.js  test-extract.js
(+35 files in other folders)
