[package]
name = "db"
version = "0.0.143"
edition = "2024"

[features]
default = []
bundled-sqlite = ["dep:libsqlite3-sys", "libsqlite3-sys/bundled"]

[dependencies]
libsqlite3-sys = { version = "0.30", optional = true }
utils = { path = "../utils" }
executors = { path = "../executors" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
strum = "0.27.2"
strum_macros = "0.27.2"

